# ezh

./: .gitignore  .gitmodules  CacheConfig.py  Dockerfile  README.md  SUMMARY.txt  divideDRAMSimtrace.py  example.c  parse_gem5_trace.py  requirements.txt  sample_graph_workloads_run.sh  se.py
aggressive_buffering/: optimistic_buffer_trace_stream.py  run_experiment.py
aggressive_buffering/results/: gcells_only_summary.json
amr_workload/: amr_counts  amr_counts.cpp  amr_gem5_output  convert_trace.py  rewrite_dramsim3_bankshift.py  scrape_and_plot.py
amr_workload/dramsim_results/: dramsim3.json  dramsim3.txt
bfs_workload/: bfs.c  bfs.cpp
bfs_workload/bfs_gem5_output/: config.dot  config.ini  config.json  stats.txt
docs/: build-gem5.md  docker.md  update-submodule.md  workload_mappings_readme.md
fft_workload/: fft  fft.c
fft_workload/data_graphs/: average_bandwidth_values.txt  average_read_latency_filtered_values.txt  average_read_latency_values.txt  combined_filtered_values.txt  reads_done_values.txt  (+1 more)
graph_workloads/: graph_coarsening  graph_coarsening.cpp  graph_coarsening_log.txt
patches/: DRAMSim.patch  gem5.patch
plugin/: CMakeLists.txt  README
plugin/src/: plugin.cpp
scripts/: baseline_workloads_run.sh  baseline_workloads_run_amr.sh  baseline_workloads_run_fft.sh  buffer_graph_workloads_run.sh  buffer_workloads_run.sh  buffer_workloads_run_amr.sh  buffer_workloads_run_fft.sh  convert_trace.py  fft_workloads_run.sh  parse_gem5.py  rewrite_dramsim3_bankshift.py  sample_graph_workloads_run.sh  scrape_and_plot.py  set_trace_cycle_zero.py
(+220 files in other folders)
